--- a/CENEPRED/Avance_03/json/config.json
+++ b/CENEPRED/Avance_03/json/config.json
@@ -7,6 +7,7 @@
                     "default": "active",
                     "objectid": "id_documento",
                     "name": "Planes PPRRD",
+                    "imagen": "https://sigrid.cenepred.gob.pe/sigridv3/storage/biblioteca/",
                     "rgb": "rgb(88,24,69)",
                     "fields":[
                         {
@@ -414,8 +415,20 @@
                             "rgb": "rgb(151,154,154)",
                             "fields":[
                                 {
-                                    "alias": "id_documento",
+                                    "alias": "Documento",
                                     "name": "id_documento"
+                                },
+                                {
+                                    "alias": "Nombre",
+                                    "name": "nombre"
+                                },
+                                {
+                                    "alias": "Tipo Documento",
+                                    "name": "tipo_documento"
+                                },
+                                {
+                                    "alias": "Descripción",
+                                    "name": "descripcion"
                                 }
                             ],
                             "url": "https://sigrid.cenepred.gob.pe/arcgis/rest/services/Informacion_Complementaria/MapServer/6090100"
